added dependencies and security